# rinha_backend_2025

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: apis.py  cache.py  depends.py  main.py  orm.py  processar_pagamentos.py  schemas.py  worker.py
nginx/: nginx.conf
redis/: redis.conf
