[tool.poetry]
name = "rinha-back-end"
version = "0.1.0"
description = "Backend para intermediar pagamentos - Rinha de Backend 2025"
authors = ["othon <othonbrener123@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
sqlalchemy = ">=2.0.0"
alembic = ">=1.12.0"
psycopg2-binary = ">=2.9.0"
pydantic = ">=2.4.0"
httpx = {extras = ["http2"], version = "^0.28.1"}
python-multipart = ">=0.0.6"
asyncpg = "^0.30.0"
aioredis = "^2.0.1"
redis = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
